--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">EspressoUITest</string>
-    <string name="error">Some error happened!</string>
+    <string name="text_launch_dialog">launch dialog</string>
+    <string name="text_ok">Ok</string>
+    <string name="text_enter_name">Enter your name</string>
 </resources>
