add camera intent test

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,4 @@
 <resources>
     <string name="app_name">EspressoUITest</string>
-    <string name="text_launch_dialog">launch dialog</string>
-    <string name="text_ok">Ok</string>
-    <string name="text_enter_name">Enter your name</string>
+    <string name="text_launch_camera">Launch camera</string>
 </resources>
